@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'org.meteorlite'
-version '1.0.20'
+version '1.0.25'
 
 repositories {
     mavenCentral()
@@ -98,7 +98,6 @@ runtime {
 }
 
 javafx {
-    sdk = "C:/Program Files/Java/javafx-sdk-11.0.2"
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.graphics', 'javafx.media']
 }
 
@@ -131,7 +130,6 @@ shadowJar {
             "-noverify",
             "-Dprism.allowhidpi=false",
             "-Dsun.awt.noerasebackground=true",
-            "--module-path=C:/Program Files/Java/javafx-sdk-11.0.2/lib",
             "--add-modules=javafx.media",
             "--add-modules=javafx.fxml",
             "--add-modules=javafx.swing",
@@ -152,6 +150,7 @@ shadowJar {
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
             "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED",
             "-Dsun.java2d.uiScale=1.0",
@@ -166,6 +165,11 @@ tasks {
 processResources {
     dependsOn(":runelite-script-assembler:assembleScripts")
     from("${buildDir}/scripts")
+}
+
+task bootstrap(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "meteor.util.bootstrap.Bootstrapper"
 }
 
 jar {
